# raytracer-rust

./: .gitignore  Cargo.toml  README.md
scene/: abgabeszene.xml  abgabetriangulation_high.xml  download
src/: bounding_box.rs  camera.rs  color.rs  file_import.rs  learn.rs  light_source.rs  main.rs  material.rs  scene.rs  triangle.rs
