[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.16.0"
roxmltree = "0.14.1"
anyhow = {version = "1.0.0", features = ["backtrace"] }
# https://rust-tutorials.github.io/learn-opengl/basics/000-creating-a-window.html
bytemuck = "1"
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
beryllium = "0.3.0"
